Fix overflow on post code examples

--- a/frontsize/themes/a-pollo/widgets/apollo-post.scss
+++ b/frontsize/themes/a-pollo/widgets/apollo-post.scss
@@ -113,6 +113,10 @@
         @extend .apollo-code-example;
         cursor: text;
         margin-bottom: s();
+        overflow-x: auto;
+        .code {
+            padding-right: s();
+        }
     }
 
 }
